# xemu-libretro

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  config.sh
.github/: FUNDING.yml
Xbox/: .clang-format  .clang-tidy  .editorconfig  .git-blame-ignore-revs  .gitattributes  .gitignore  .gitlab-ci.yml  .gitmodules  .mailmap  .patchew.yml  .readthedocs.yml  .travis.yml  Info.plist  Kconfig  Kconfig.host  MAINTAINERS  Makefile  QEMU_VERSION  README.md  README.rst  block.c  blockdev-nbd.c  blockdev.c  blockjob.c  build.sh  config_spec.yml  configure  configure.linux  cpu-common.c  cpu-target.c  event-loop-base.c  get_deps.py  gitdm.config  hmp-commands-info.hx  hmp-commands.hx  iothread.c  job-qmp.c  job.c  main.cpp  meson.build  (+34 more)
Xbox/.github/: FUNDING.yml  dependabot.yml
Xbox/.gitlab-ci.d/: base.yml  buildtest-template.yml  buildtest.yml  check-dco.py  check-patch.py  cirrus.yml  container-core.yml  container-cross.yml  container-template.yml  containers.yml  crossbuild-template.yml  crossbuilds.yml  custom-runners.yml  opensbi.yml  qemu-project.yml  stages.yml  static_checks.yml  windows.yml
Xbox/accel/: Kconfig  accel-blocker.c  accel-system.c  accel-system.h  accel-target.c  accel-user.c  dummy-cpus.c  meson.build
Xbox/audio/: alsaaudio.c  audio-hmp-cmds.c  audio.c  audio.h  audio_int.h  audio_template.h  audio_win_int.c  coreaudio.m  dbusaudio.c  dsound_template.h  dsoundaudio.c  jackaudio.c  meson.build  mixeng.c  mixeng.h  noaudio.c  ossaudio.c  paaudio.c  pwaudio.c  rate_template.h  sdlaudio.c  sndioaudio.c  spiceaudio.c  trace-events  trace.h  wavaudio.c  wavcapture.c
Xbox/authz/: base.c  list.c  listfile.c  meson.build  pamacct.c  simple.c  trace-events  trace.h
Xbox/backends/: Kconfig  confidential-guest-support.c  cryptodev-builtin.c  cryptodev-hmp-cmds.c  cryptodev-lkcf.c  cryptodev-vhost-user.c  cryptodev-vhost.c  cryptodev.c  dbus-vmstate.c  dbus-vmstate1.xml  host_iommu_device.c  hostmem-epc.c  hostmem-file.c  hostmem-memfd.c  hostmem-ram.c  hostmem-shm.c  hostmem.c  iommufd.c  meson.build  rng-builtin.c  rng-egd.c  rng-random.c  rng.c  spdm-socket.c  trace-events  trace.h  vhost-user.c
Xbox/block/: accounting.c  aio_task.c  amend.c  backup.c  blkdebug.c  blkio.c  blklogwrites.c  blkreplay.c  blkverify.c  block-backend.c  block-copy.c  block-gen.h  block-ram-registrar.c  bochs.c  cloop.c  commit.c  copy-before-write.c  copy-before-write.h  copy-on-read.c  copy-on-read.h  coroutines.h  create.c  crypto.c  crypto.h  curl.c  dirty-bitmap.c  dmg-lzfse.c  dmg.c  dmg.h  file-posix.c  file-win32.c  filter-compress.c  gluster.c  graph-lock.c  io.c  io_uring.c  iscsi-opts.c  iscsi.c  linux-aio.c  meson.build  (+48 more)
Xbox/bsd-user/: bsd-file.h  bsd-mem.c  bsd-mem.h  bsd-proc.c  bsd-proc.h  bsdload.c  elfcore.c  elfload.c  errno_defs.h  main.c  meson.build  mmap.c  qemu-bsd.h  qemu.h  signal-common.h  signal.c  strace.c  syscall_defs.h  trace-events  trace.h  uaccess.c
Xbox/chardev/: baum.c  char-fd.c  char-fe.c  char-file.c  char-hmp-cmds.c  char-io.c  char-mux.c  char-parallel.c  char-pipe.c  char-pty.c  char-ringbuf.c  char-serial.c  char-socket.c  char-stdio.c  char-udp.c  char-win-stdio.c  char-win.c  char.c  chardev-internal.h  meson.build  msmouse.c  spice.c  testdev.c  trace-events  trace.h  wctablet.c
Xbox/common-user/: meson.build  safe-syscall-error.c  safe-syscall.S
Xbox/crypto/: aes.c  afalg.c  afalgpriv.h  afsplit.c  akcipher-gcrypt.c.inc  akcipher-nettle.c.inc  akcipher.c  akcipherpriv.h  block-luks-priv.h  block-luks.c  block-qcow.c  block.c  blockpriv.h  cipher-afalg.c  cipher-builtin.c.inc  cipher-gcrypt.c.inc  cipher-gnutls.c.inc  cipher-nettle.c.inc  cipher.c  cipherpriv.h  clmul.c  der.c  der.h  hash-afalg.c  hash-gcrypt.c  hash-glib.c  hash-gnutls.c  hash-nettle.c  hash.c  hashpriv.h  hmac-gcrypt.c  hmac-glib.c  hmac-gnutls.c  hmac-nettle.c  hmac.c  hmacpriv.h  init.c  ivgen-plain.h  ivgen.c  ivgenpriv.h  (+25 more)
Xbox/data/: meson.build
Xbox/debian/: build_deb.sh  changelog  control  copyright  rules  watch
Xbox/disas/: capstone.c  disas-common.c  disas-host.c  disas-internal.h  disas-mon.c  disas-target.c  hexagon.c  hppa.c  m68k.c  meson.build  microblaze.c  mips.c  nanomips.c  objdump.c  riscv-xthead.c  riscv-xthead.h  riscv-xventana.c  riscv-xventana.h  riscv.c  riscv.h  sh4.c
Xbox/docs/: COLO-FT.txt  block-replication.txt  bypass-iommu.txt  colo-proxy.txt  conf.py  defs.rst.inc  image-fuzzer.txt  index.rst  meson.build  multi-thread-compression.txt  multiseat.txt  nvdimm.txt  pci_expander_bridge.txt  pcie.txt  pcie_pci_bridge.txt  pcie_sriov.txt  qcow2-cache.txt  qdev-device-use.txt  qemu-option-trace.rst.inc  rdma.txt  requirements.txt  throttle.txt  xbzrle.txt
Xbox/dump/: dump-hmp-cmds.c  dump.c  meson.build  win_dump.c  win_dump.h
Xbox/ebpf/: ebpf.c  ebpf.h  ebpf_rss-stub.c  ebpf_rss.c  ebpf_rss.h  meson.build  rss.bpf.skeleton.h  trace-events  trace.h
Xbox/fpu/: meson.build  softfloat-parts-addsub.c.inc  softfloat-parts.c.inc  softfloat-specialize.c.inc  softfloat.c
Xbox/fsdev/: 9p-iov-marshal.c  9p-marshal.c  9p-marshal.h  file-op-9p.h  meson.build  p9array.h  qemu-fsdev-throttle.c  qemu-fsdev-throttle.h  qemu-fsdev.c  qemu-fsdev.h
Xbox/gdb-xml/: aarch64-mte.xml  aarch64-pauth.xml  arm-m-profile-mve.xml  arm-neon.xml  arm-vfp-sysregs.xml  arm-vfp.xml  arm-vfp3.xml  avr-cpu.xml  hexagon-core.xml  hexagon-hvx.xml  i386-32bit-linux.xml  i386-32bit.xml  i386-64bit-linux.xml  loongarch-base32.xml  loongarch-base64.xml  loongarch-fpu.xml  loongarch-lasx.xml  loongarch-lsx.xml  microblaze-core.xml  microblaze-stack-protect.xml  riscv-32bit-cpu.xml  riscv-32bit-fpu.xml  riscv-64bit-cpu.xml  riscv-64bit-fpu.xml  s390-virt-kvm.xml  s390-virt.xml
Xbox/gdbstub/: gdbstub.c  internals.h  meson.build  syscalls.c  system.c  trace-events  trace.h  user-target.c  user.c
Xbox/hw/: Kconfig  meson.build
Xbox/include/: elf.h  glib-compat.h  qemu-main.h  xemu-precompiled.h
Xbox/io/: channel-buffer.c  channel-command.c  channel-file.c  channel-null.c  channel-socket.c  channel-tls.c  (+10 more)
XemuLibretro/: Main.cpp  main.c  xemu-precompiled.h
(+6960 files in other folders)
